fix list table alignment issue

--- a/components/src/core/components/ListTable/table-header.scss
+++ b/components/src/core/components/ListTable/table-header.scss
@@ -6,4 +6,5 @@
   display: flex;
   flex-direction: column;
   min-height: 45px;
+  justify-content: center;
 }
